Books page spacing issue attempt 2

--- a/src/components/Books/Books.css
+++ b/src/components/Books/Books.css
@@ -9,7 +9,7 @@
 
 .booksComponent {
   height: auto;
-  min-height: 750px;
+  /* min-height: 750px; */
   width: 80vw;
   display: flex;
   justify-content: center;
